part0 valmis palautettavaksi

--- a/Part0/webpage.html
+++ b/Part0/webpage.html
@@ -17,7 +17,7 @@
             <p>
                 <h2>AINEKSET:</h2>
                 <ul class="ainekset">
-                    <li class="ainekset kaali"> 1 kg kaalia </li>
+                    <li id="kaali"> 1 kg kaalia </li>
                     <li> 1 1/2 tl suolaa </li>
                     <li> 1/2 tl pippuria </li>
                 </ul>
